--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,9 @@
     <string name="prompt_login">Sign In to continue</string>
     <string name="prompt_register">Register to continue</string>
     <string name="title_activity_register">RegisterActivity</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="forget_password">Forget Password?</string>
+    <string name="submit_txt">SUBMIT</string>
+    <string name="register_device_txt">Register Device</string>
 </resources>
